Implemented NFT and Collection creation. (#7)
* Implemented NFT and Collection creation.
Added migrations to create new tables

* Implemented NFT and Collection creation.
Added migrations to create new tables
